<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAddBikeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtSqlBikeName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAddBikeType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtSqlBikeType" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/dataLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAddCalculate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/shape"
                    android:enabled="false"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/btnCalculate"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPDF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtResultName" />

                <Button
                    android:id="@+id/btnAddSqlCalculation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/btnAddSqlCalculate"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnAddCalculate" />

                <ImageButton
                    android:id="@+id/infoButtonChainset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/info_svg"
                    android:scaleType="centerInside"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayoutCassete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayoutChainset"
                    app:srcCompat="@drawable/info_svg"
                    tools:layout_conversion_absoluteHeight="30dp"
                    tools:layout_conversion_absoluteWidth="150dp" />

                <ImageButton
                    android:id="@+id/infoButtonCassette"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/info_svg"
                    android:scaleType="centerInside"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayoutBracket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayoutCassete"
                    app:srcCompat="@drawable/info_svg" />

                <ImageButton
                    android:id="@+id/infoButtonSuportHub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/info_svg"
                    android:scaleType="centerInside"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutBracket"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textInputLayoutBracket"
                    app:srcCompat="@drawable/info_svg" />

                <ImageButton
                    android:id="@+id/imgBtnPDF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/pdf_svg"
                    android:contentDescription="@string/txtPDF"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:textColor="@android:color/holo_blue_bright"
                    app:layout_constraintBottom_toBottomOf="@+id/btnAddCalculate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnAddCalculate"
                    app:srcCompat="@drawable/pdf_svg" />

                <ImageView
                    android:id="@+id/imgAdd"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@mipmap/ic_launcher2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBracket" />

                <TextView
                    android:id="@+id/txtResultName"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txtResult"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgAdd" />

                <TextView
                    android:id="@+id/txtResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtResultName"
                    app:layout_constraintStart_toEndOf="@+id/txtResultName"
                    app:layout_constraintTop_toTopOf="@+id/txtResultName" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutChainset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/infoButtonChainset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAddChainset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:hint="@string/txtNumberChainringsLargestDiscChainset"
                        app:layout_constraintEnd_toStartOf="@+id/infoButtonChainset"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="66dp"
                        tools:layout_conversion_absoluteWidth="213dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutCassete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/infoButtonCassette"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutChainset">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAddCassette"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:hint="@string/txtNumberChainringsLargestDiscCassette"
                        app:layout_constraintEnd_toStartOf="@+id/infoButtonCassette"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtAddChainset" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutBracket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/infoButtonSuportHub"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCassete">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtAddBracket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:hint="@string/txtLengthBottomBracketRearHub"
                        app:layout_constraintEnd_toStartOf="@+id/infoButtonSuportHub"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtAddCassette" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnAddBikeImg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/btnSqlChooseImage"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/imgAdd"
                    app:layout_constraintEnd_toStartOf="@+id/imgAdd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imgAdd" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>